se agrago el titulo y un parrafo en html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
 
 <body>
 
-
+	<h1>Esto es un título</h1>
+	<p>Estamos probando git</p>
 
 </body>
 
 <!-- en consola git bash git 1. la 2. ls 3. cd 4.cd do tab para cutocompletas + dc documents + ls + cd coderhouse + ls + cd clase (no crear carpetas con espacios)-->
+
+<!-- no se puede trabajar sobre solo una carpeta de un proyecto en git, se trabaja sobre toda la carpeta del proyecto -->
+
+<!-- git init para pararse sobre la carpeta para versionarla -->
+
+<!-- git add --all para agregar los archivos de la carpeta para commetearlos (commit) versionarlos-->
+
+<!-- git status (para confirmar que se agregaron) (aparecen en verde)-->
+
+<!-- git commit -m "inicio de proyecto con git"-->
+
+<!-- git log para ver el autor del commit-->
+
+<!-- git config --global user.mail (user.name) "cat.carcamog@gmail.com" para identificar usuario-->
 
 </html>
 
