--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<h1>Esto es un título</h1>
 	<p>Estamos probando git</p>
 	<h3>Esto es un h3</h3>
+	<small>Hola esto es un small</small>
 
 </body>
 
